--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,19 +2,20 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon name="flash"></ion-icon>
-      <ion-label>Tab One</ion-label>
+      <ion-icon name="globe"></ion-icon>
+      <ion-label>Translator</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="apps"></ion-icon>
-      <ion-label>Tab Two</ion-label>
+      <ion-icon name="list"></ion-icon>
+      <ion-label>History</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="send"></ion-icon>
-      <ion-label>Tab Three</ion-label>
+      <ion-icon name="help"></ion-icon>
+      <ion-label>About</ion-label>
     </ion-tab-button>
+
   </ion-tab-bar>
 
 </ion-tabs>
