--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -17,7 +17,7 @@
 
   <ion-card>
     <ion-card-content>
-      {{ input }} <ion-icon name="arrow-forward"></ion-icon> Output
+      {{ input }} <ion-icon name="arrow-forward"></ion-icon> {{ output }}
     </ion-card-content>
   </ion-card>
 
